2024-04-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLSession.m: fix for #385

2024-03-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: Ensure class pointer is initialised
	before use (git issue #381).

2024-03-10 Hugo Melder <service@hugomelder.com>
	* Headers/Foundation/NSDate.h:
	* Source/NSDate.m:
	Added the +[NSDate now] constructor, which was introduced in macOS 10.15.

2024-03-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSJSONSerialization.m: Fix leak reported by Larry Campbell
	git issue #377

2024-02-20 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Move posting of notification outside lock
	protected region to avoid deadlock.

2024-02-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: fix for #361

2024-02-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSNetwork.h:
	* Source/GSSocketStream.m:
	* Source/GSStream.m:
	* Source/NSMessagePort.m:
	* Source/NSSocketPort.m:
	Improve handling of error responses from socket operations and tweak
	behavior in windows to try to recognise end of connection more reliably.

2024-02-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSError.m: Make -description and -localizedDescription formats

2024-02-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSException.m: Prefer objc_set_unexpected() to the older
	_objc_unexpected_exception for setting handler.  Should cure problem
	where _objc_unexpected_exception exists in library but not header.

2024-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURLProtocol.h:
	* Source/GSEasyHandle.m:
	* Source/GSHTTPURLProtocol.m:
	* Source/GSNativeProtocol.m:
	* Source/NSURLProtocol.m:
	* Source/NSURLSession.m:
	Add +canInitWithTask: and altered code to differentiate between
	protocols which can be used with NSURLConnection and those which
	can be used with NSURLSession to fix #302

2024-02-11 Richard Frith-Macdonald <rfm@gnu.org>
