@@ -1,3 +1,8 @@
+2024-04-15 Frederik Seiffert <frederik@algoriddim.com>
+
+	* Source/NSObject.m: add +[NSObject _TrivialAllocInit] to enable
+	fast-path alloc / init methods with libobjc2 2.2.
+
 2024-04-02 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSURLSession.m: fix for #385
